made project_list.html template more HTML5

--- a/project_viewer/templates/pv/project_list.html
+++ b/project_viewer/templates/pv/project_list.html
@@ -1,35 +1,39 @@
 {% if project_list %}
 	{% for project in project_list %}
-		<h2>{{ project.title }}</h2>
+		<section>
+			<header>
+				<h1>{{ project.title }}</h1>
+			</header>
 
-		<p>Created {{ project.creation_date|date:"M Y" }}</p>
-		{% if project.finish_date %}
-		<p>Completed {{ project.finish_date|date:"M Y" }}</p>
-		{% else %}
-		<p>In progress</p>
-		{% endif %}
+			<p>Created <time>{{ project.creation_date|date:"M Y" }}</time></p>
+			{% if project.finish_date %}
+			<p>Completed <time>{{ project.finish_date|date:"M Y" }}</time></p>
+			{% else %}
+			<p>In progress</p>
+			{% endif %}
 
-		<p>{{ project.description }}</p>
+			<p>{{ project.description }}</p>
 
-		<p>Tools: {{ project.skills.all | join:", " }}</p>
-		{% if project.site %}
-		<div>
-			<a href="{{ project.site }}">Homepage</a>
-		</div>
-		{% endif %}
-		{% if project.source %}
-		<div>
-			<a href="{{ project.source }}">Source</a>
-		</div>
-		{% endif %}
-		{% if project.demo %}
-		<div>
-			<a href="{{ project.demo }}">Live demo</a>
-		</div>
-		{% endif %}
-		{% for image in project.projectimage_set.all %}
-		<img src="{{ image.image.url }}" alt="{{ image.image_text }}">
-		{% endfor %}
+			<p>Tools: {{ project.skills.all | join:", " }}</p>
+			{% if project.site %}
+			<div>
+				<a href="{{ project.site }}">Homepage</a>
+			</div>
+			{% endif %}
+			{% if project.source %}
+			<div>
+				<a href="{{ project.source }}">Source</a>
+			</div>
+			{% endif %}
+			{% if project.demo %}
+			<div>
+				<a href="{{ project.demo }}">Live demo</a>
+			</div>
+			{% endif %}
+			{% for image in project.projectimage_set.all %}
+			<img src="{{ image.image.url }}" alt="{{ image.image_text }}">
+			{% endfor %}
+		</section>
 	{% endfor %}
 {% else %}
 <p>No projects are available.</p>
