made site base template

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,18 @@
-hej
+<header>
+	<nav>
+		<ul>
+			<li>
+				<a href="/">Home</a>
+			</li>
+			<li>
+				<a href="/projects">Projects</a>
+			</li>
+			<li>
+				<a href="/about">About me</a>
+			</li>
+		</ul>
+	</nav>
+</header>
 
 {% block content %}
 {% endblock content %}
